v6.0.0/_sources/generated/pcdsdevices.valve.VRCDA.rst.txt
pcdsdevices.valve.VRCDA
=======================

.. currentmodule:: pcdsdevices.valve

.. autoclass:: VRCDA

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - close_command
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:CLS_SW``
          - Epics command to close valve
          - normal
          - Inherited from :class:`~pcdsdevices.valve.VRCNO`
    
        * - close_override
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:FORCE_CLS``
          - Epics Command for open the valve in override mode
          - omitted
          - Inherited from :class:`~pcdsdevices.valve.VRCNO`
    
        * - override_on
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:OVRD_ON``
          - Epics Command to set/reset Override mode
          - omitted
          - Inherited from :class:`~pcdsdevices.valve.VRCNO`
    
        * - close_ok
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:CLS_OK_RBV``
          - used for normally open valves
          - normal
          - Inherited from :class:`~pcdsdevices.valve.VRCNO`
    
        * - close_do
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:CLS_DO_RBV``
          - PLC Output to close valve
          - normal
          - Inherited from :class:`~pcdsdevices.valve.VRCNO`
    
        * - state
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:STATE_RBV``
          - Valve state
          - normal
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    
        * - error_reset
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:ALM_RST``
          - Reset Error state to valid by toggling this
          - normal
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    
        * - open_limit
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPN_DI_RBV``
          - Open limit switch digital input
          - hinted
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    
        * - closed_limit
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:CLS_DI_RBV``
          - Closed limit switch digital input
          - hinted
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    
        * - open_command
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:OPN_SW``
          - Epics command to Open valve
          - normal
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    
        * - interlock_ok
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPN_OK_RBV``
          - Valve is OK to Open interlock 
          - normal
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    
        * - open_do
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OPN_DO_RBV``
          - PLC Output to Open valve, 1 means 24V on command cable
          - normal
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    
        * - override_status
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:OVRD_ON_RBV``
          - Epics Readback on Override mode
          - omitted
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    
        * - override_force_open
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``:FORCE_OPN``
          - Epics Command to force open the valve inoverride mode
          - omitted
          - Inherited from :class:`~pcdsdevices.valve.VRC`
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: transmission
    
    